generate openapi server
