# pkg/gen/openapi/api.go
@@ -1,0 +1,40 @@
+/*
+ * Disc Golf API
+ *
+ * Open-source Disc golf api that follows OpenAPI specification. Source code can be found [here](https://github.com/OliverMKing/disc-golf-api).
+ *
+ * API version: 0.0.1
+ * Contact: olivermerkleyking@gmail.com
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"context"
+	"net/http"
+)
+
+
+
+// DiscApiRouter defines the required methods for binding the api requests to a responses for the DiscApi
+// The DiscApiRouter implementation should parse necessary information from the http request,
+// pass the data to a DiscApiServicer to perform the required actions, then write the service results to the http response.
+type DiscApiRouter interface { 
+	AddDisc(http.ResponseWriter, *http.Request)
+	GetDiscById(http.ResponseWriter, *http.Request)
+	ListDisc(http.ResponseWriter, *http.Request)
+	UpdateDisc(http.ResponseWriter, *http.Request)
+}
+
+
+// DiscApiServicer defines the api actions for the DiscApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it,
+// while the service implementation can be ignored with the .openapi-generator-ignore file
+// and updated with the logic required for the API.
+type DiscApiServicer interface { 
+	AddDisc(context.Context, Disc) (ImplResponse, error)
+	GetDiscById(context.Context, int64) (ImplResponse, error)
+	ListDisc(context.Context, int64, int64) (ImplResponse, error)
+	UpdateDisc(context.Context, Disc) (ImplResponse, error)
+}
